[package]
name = "websocket"
version = "0.1.0"
authors = ["usrr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-util = { git = "https://github.com/tokio-rs/async" }
bit-vec = "0.6"
base64="*"
sha1="*"
hyper={ path="/home/usrr/hyper"}
tokio = { git = "https://github.com/tokio-rs/tokio", default-features = false, features = ["rt-full"] }
tokio-io = { git = "https://github.com/tokio-rs/tokio" }
tokio-tcp = { git = "https://github.com/tokio-rs/tokio"  }



futures-preview = { version = "= 0.3.0-alpha.17", features = ["compat", "io-compat", "async-await", "nightly"] }
futures-util-preview = {  version = "= 0.3.0-alpha.17" }

[dev-dependencies]
